--- a/worblehat-web/src/main/resources/ValidationMessages.properties
+++ b/worblehat-web/src/main/resources/ValidationMessages.properties
@@ -4,10 +4,10 @@ empty.bookDataFormData.yearOfPublication=Year is mandatory
 empty.bookDataFormData.edition=Edition is mandatory
 empty.bookDataFormData.author=Author is mandatory
 empty.bookDataFormData.isbn=ISBN is mandatory
-notvalid.bookDataFormData.edition=Edition is not valid
-notvalid.bookDataFormData.isbn=ISBN is not valid
-notvalid.bookDataFormData.yearOfPublication=Year is not valid
-invalid.length.bookDataFormData.yearOfPublication=Year is not valid
+notvalid.bookDataFormData.edition=Edition should not contain letters
+notvalid.bookDataFormData.isbn=ISBN is not valid (only ISBN-10 format)
+notvalid.bookDataFormData.yearOfPublication=Year is not valid (only in YYYY format)
+invalid.length.bookDataFormData.yearOfPublication=Year is not valid (only in YYYY format)
 
 # Borrow book form
 notvalid.borrowCmd.isbn=ISBN is not valid
