--- a/worblehat-web/src/main/resources/ValidationMessages.properties
+++ b/worblehat-web/src/main/resources/ValidationMessages.properties
@@ -6,19 +6,19 @@ empty.bookDataFormData.author=Author is mandatory
 empty.bookDataFormData.isbn=ISBN is mandatory
 notvalid.bookDataFormData.edition=Edition should not contain letters
 notvalid.bookDataFormData.isbn=ISBN is not valid (only ISBN-10 format)
-notvalid.bookDataFormData.yearOfPublication=Year is not valid (only in YYYY format)
-invalid.length.bookDataFormData.yearOfPublication=Year is not valid (only in YYYY format)
+notvalid.bookDataFormData.yearOfPublication=Year is not valid (only in YYYY format ex:2020)
+invalid.length.bookDataFormData.yearOfPublication=Year is not valid (only in YYYY format ex:2020)
 
 # Borrow book form
-notvalid.borrowCmd.isbn=ISBN is not valid
-empty.borrowCmd.isbn=ISBN is mandatory
-notvalid.borrowCmd.email=Email is not valid
-empty.borrowCmd.email=Email is mandatory
+notvalid.borrowCmd.isbn=ISBN is not valid! (only ISBN-10 format)
+empty.borrowCmd.isbn=ISBN is mandatory!
+notvalid.borrowCmd.email=Email is not valid! (example@server.com) 
+empty.borrowCmd.email=Email is mandatory!
 
 # Return all books form
-empty.returnAllBookFormData.emailAddress=Email is mandatory
-notvalid.returnAllBookFormData.emailAddress=Email is not valid
+empty.returnAllBookFormData.emailAddress=Email is mandatory!
+notvalid.returnAllBookFormData.emailAddress=Email is not valid! (example@server.com) 
 
 # Default messages for custom validators
-de.codecentric.psd.worblehat.web.validation.ISBN=ISBN is not valid
-de.codecentric.psd.worblehat.web.validation.Numeric=Value has to be numeric
+de.codecentric.psd.worblehat.web.validation.ISBN=ISBN is not valid! (only ISBN-10 format)
+de.codecentric.psd.worblehat.web.validation.Numeric=Value has to be numeric!
