--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>de.codecentric.psd</groupId>
     <artifactId>worblehat</artifactId>
-    <version>1.3.0-snapshot</version>
+    <version>1.4.0</version>
     <packaging>pom</packaging>
 
     <modules>
